--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="feb3fa">  <td>16/10/10 17:14:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ApiOamCreateAccount.ApiPostSuccess()[pri:0, instance:automationFramework.TestCases.ApiOamCreateAccount@49993335]">ApiPostSuccess</td> 
-  <td>main@1468303011</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>16/10/11 15:53:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ApiNisGetAccount.ApiGetSuccess()[pri:0, instance:automationFramework.TestCases.ApiNisGetAccount@ff5b51f]">ApiGetSuccess</td> 
+  <td>main@1539805781</td>   <td></td> </tr>
 </table>
